Switched to Java 8 due to requirments